--- a/index.html
+++ b/index.html
@@ -1,36 +1,131 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-<title>HR Tape</title>
-<link type="text/css" rel="stylesheet" href="style.css">
-</head>
-<body>
-<div class="menu">
-<div class="row">
-<div class="left">
-<a href="#">HR Tape</a>
-</div>
-<div class="center">
-<a href="#/posts" current>Публикации</a>
-<a href="#/catalog">Порфтолио</a>
-<a href="#/add">Создать заказ</a>
-<a href="#/callbacks">Отзывы</a>
-<a href="#/about">Информация</a>
-</div>
-<div class="right">
-<a href="#/audios">♪</a>      
-</div>
-</div>
-</div>
-<div class="main">
-<div class="block">
-<a class="title" href="#">Обычный менеджер научился жалобами на майонез зарабатывать до 80000</a>
-<div class="content"><p>Всё, что требуется от мужчины, — это просто зайти в любой ресторан или фастфуд и выйти оттуда сытым, при этом часто не заплатив ни копейки.</p><p>Хитрый PR-менеджер Крис Оуэн из графства Бакингемшир посчитал, что ему не хватает основного заработка, а на подработку совсем не остаётся сил. Решение подсказал мозг, и этот человек стал делать деньги почти что из воздуха... А если быть точнее, то из майонеза, пишет Mirro</p><p>Оуэн приходит в приглянувшийся ему ресторан или кафе и заказывает любимое блюдо. Практически во всех из них есть майонез, особенно в бургерах. Только Крис не считает это вкусным дополнением к сочной булочке и всегда просит персонал не добавлять вредный ингредиент.</p><p>А далее начинается игра на внимательность. Забывчивость или нежелание официантов выполнять это требование приносят Крису Оуэну неплохой доход. По его подсчётам, такая стратегия ежегодно приносит ему до £1 тыс. (80 тыс. руб).</p><p>Дело в том, что Оуэн всегда проявляет крайнюю степень возмущения, и нежелание ввязываться в скандал заставляет представителей заведений предлагать ему бесплатные обеды, скидки и прочие формы "неустойки". Таким способом британец живёт уже около трёх лет.</p><p>Крис вспомнил, как однажды повар переборщил с перцем чили в пицце и за это ресторан выплатил ему компенсацию в £400 (33 тыс. руб). Кроме того, Крис щепетилен не только в отношении майонеза, но и в других элементах обслуживания. Он считает, что делает это абсолютно полноправно. Своим рассказом он призывает всех перестать мириться с ситуацией, если она вам не нравится.</p></div>
-<div class="footer">
-<a href="#">Читать далее...</a>
-</div>
-</div>
-</div>
-<div class="copyright">© 2018 HR Tape</div>
-</body>
+<!DOCTYPE html>
+<html lang="ru">
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+      <link rel="stylesheet" href="css/style.css">
+      <title>Сайт на Bootstrap 4 + BEM</title>
+   </head>
+   <body>
+      <header class="menu">
+         <div class="container">
+            <div class="row">
+               <div class="col-xl-12">
+                  <nav>
+                     <ul class="d-flex justify-content-center">
+                        <li><a class="active" href="#">Главная</a></li>
+                        <li><a href="#about">Обо мне</a></li>
+                        <li><a href="#info">Резюме</a></li>
+                        <li><a href="#portfolio">Портфолио</a></li>
+                        <li><a href="#contacts">Контакты</a></li>
+                     </ul>
+                  </nav>
+               </div>
+            </div>
+         </div>
+      </header>
+      <section class="one">
+         <div class="container">
+            <div class="row justify-content-center">
+               <div class="col-xl-6 aleft">
+                  <h2>
+                  Солоницын Ян Янович</h1>
+                  <p>Web-разработчик / html-верстальщик</p>
+                  <p>Программист PHP / Javascript</p>
+               </div>
+               <div class="col-xl-4 aright">
+                  <img class="avatar" src="img/avatar.png" alt="Аватар пользователя">
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="two">
+         <div class="container">
+            <div class="row justify-content-center">
+               <div class="col-xl-10">
+                  <h1>Немного о себе</h1>
+                  <p>Доброго времени суток, меня зовут Ян. Занимаюсь разработкой сайтов. Создаю сайты, которые отлично смотрятся, быстро загружаются, функциональны и просты в использовании. Любой начатый проект довожу до конца, постоянно совершенствую свой профессиональный уровень. Вы можете заказать у меня разработку сайта с нуля, или связаться со мной для сотрудничества.</p>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="three">
+         <div class="container">
+            <div class="row justify-content-center">
+               <div class="col-xl-12">
+                  <h1>Мои знания</h1>
+                  <div class="features">
+                     <section>
+                        <i class="fas fa-code"></i>
+                        <h3>Знания в области Web</h3>
+                        <p>Язык программирования PHP c ООП. Основы JavaScript, jQuery, AJAX. HTML5, CSS3, sass, less, bootstrap 4, git, язык запросов SQL, адаптивная верстка. СУБД MySQL, сервер Apache2, nginx, администрирование Windows, Linux.</p>
+                     </section>
+                     <section>
+                        <i class="fas fa-book"></i>
+                        <h3>Самообразование</h3>
+                        <p>Курсы в интернете, видеокурсы, книги, документация, форумы, статьи...
+                           Созданием сайтов занимаюсь с 2016 года по настоящее время.
+                        </p>
+                     </section>
+                     <section>
+                        <i class="fas fa-cog"></i>
+                        <h3>Программы</h3>
+                        <p>Adobe Photoshop, Sublime Text, Notepad++, Visual Studio Code, phpmyadmin. Open Server, LAMP.</p>
+                     </section>
+                     <section>
+                        <i class="fab fa-html5"></i>
+                        <h3>Знание языков</h3>
+                        <p>Русский, английский(вeginner)</p>
+                     </section>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="four">
+         <div class="container">
+            <div class="row justify-content-center">
+               <div class="col-xl-12">
+                  <h1>Портфолио</h1>
+                  <div class="works">
+                        <a href="#" class="col-xl-4">Макет</a><a href="#" class="col-xl-4">Макет</a><a href="#" class="col-xl-4">Макет</a>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="five">
+         <div class="container">
+            <div class="row justify-content-center">
+               <div class="col-xl-12">
+                  <h1>Контакты</h1>
+                  <form>
+                     <div class="form-row">
+                        <div class="form-group col-md-6">
+                           <label>Имя</label>
+                           <input type="text">
+                        </div>
+                        <div class="form-group col-md-6">
+                           <label>Email</label>
+                           <input type="email">
+                        </div>
+                     </div>
+                     <div class="form-group">
+                        <label>Сообщение</label>
+                        <textarea></textarea>
+                     </div>
+                     <button type="submit">Отправить</button>
+                  </form>
+               </div>
+            </div>
+         </div>
+      </section>
+      <footer>
+         © Ян Солоницын, 2016 - 2019
+      </footer>
+   </body>
 </html>
